# GemEngine

./: .gitignore  .gitmodules  Cargo.toml  README.md  zobrist_numbers.py
benches/: evaluation.rs  gem_bench.rs  perft.rs
src/: board.rs  gem.rs  hashmap.rs  lib.rs  main.rs  parser.rs  perft.rs  pgn.rs  piece_square_tables.rs  shared_hashmap.rs  transposition_table.rs  uci.rs  zobrist.rs
src/board/: bitboard.rs  evaluation.rs  magics.rs  move_generation.rs  moves.rs  posn.rs  sliding_attacks.rs
src/magics/: bishop_magics.txt  find_magics.rs  rook_magics.txt
src/parser/: combinators.rs  text.rs
src/uci/: reader.rs
tools/: zobrist_numbers.py
