[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[lib]
name = "gem"
path = "src/lib.rs"

[[bin]]
name = "gem"
path = "src/bin/main.rs"

[[bin]]
name = "find_magics"
path = "src/magics/find_magics.rs"

[dependencies]
paste = "1.0"
threadpool = "1.8.1"
lazy_static = "1.5.0"
rand = "0.8.5"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = "0.3.0"
tracing-chrome = "0.7.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "gem_bench"
harness = false

[profile.rel-with-debug]
inherits = "release"
debug = true
